Statistical Testing using ANOVA

--- a/notebooks/compare_countries.ipynb
+++ b/notebooks/compare_countries.ipynb
@@ -2,14 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "67a5e423",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import f_oneway"
    ]
   },
   {
@@ -248,6 +249,35 @@
    "source": [
     "summary = df_all.groupby('Country')[['GHI', 'DNI', 'DHI']].agg(['mean', 'median', 'std']).round(2)\n",
     "summary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "14c34eca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ANOVA test p-value: 0.00000\n",
+      "There is a significant difference in GHI between the countries.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Extract GHI values per country\n",
+    "ghi_benin = benin[\"GHI\"]\n",
+    "ghi_togo = togo[\"GHI\"]\n",
+    "ghi_sierra = sierra_leone[\"GHI\"]\n",
+    "\n",
+    "# One-way ANOVA\n",
+    "f_stat, p_val = f_oneway(ghi_benin, ghi_togo, ghi_sierra)\n",
+    "\n",
+    "print(f\"ANOVA test p-value: {p_val:.5f}\")\n",
+    "if p_val < 0.05:\n",
+    "    print(\"There is a significant difference in GHI between the countries.\")"
    ]
   }
  ],
